[gd_scene load_steps=3 format=3 uid="uid://58ndrefkcec2"]

[ext_resource type="Script" path="res://ui/multiplayer/Multiplayer.gd" id="1_c03ku"]
[ext_resource type="Theme" uid="uid://bi3gnitxrp3im" path="res://resources/MainTheme.tres" id="2_2hexb"]

[node name="Multiplayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c03ku")

[node name="UI" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="Options" type="VBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_2hexb")
alignment = 1

[node name="Label" type="Label" parent="UI/Options"]
visible = false
layout_mode = 2
text = "Choose"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Options"]
layout_mode = 2

[node name="HostButton" type="Button" parent="UI/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "Host"

[node name="JoinButton" type="Button" parent="UI/Options/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 70
text = "Join"

[node name="Remote" type="LineEdit" parent="UI/Options"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "127.0.0.1"
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="Spacer" type="Label" parent="UI/Options"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="UI/Options"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="UI/Options/HBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/Options/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/Options/Button" to="." method="_on_button_pressed"]
